Fix width of inputs (visible in mobile view)

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -41,7 +41,7 @@ p.center {
 
 .hContainer {
     padding: 0.5em;
-    max-width: 105em;
+    max-width: 103em;
     margin: auto;
 }
 
